# snapgit

./: .gitignore  README.md  environment.yml  pyproject.toml  setup.py
snapgit/: __init__.py
src/snapgit/: __init__.py
