[build-system]
requires = ["setuptools>=61", "setuptools_scm>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "snapgit"
description = "A radiative transfer model for the Earth observation community"
requires-python = ">=3.8"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Vincent Leroy"},
]
maintainers = [
    {name = "Vincent Leroy"},
]
dynamic = ["version"]

dependencies = [
  "click>=5.0",
  "pyyaml>=5.1",
]

[project.scripts]
snapgit = "snapgit:main"

[tool.setuptools.packages.find]
where = ["src"]
namespaces = false

[tool.setuptools_scm]
version_scheme = "post-release"  # Count commits since last tag, don't anticipate new version
git_describe_command = [
    "git",
    "describe",
    "--dirty",
    # "--tags",
    "--long",
    "--match",
    "[0-9]*",
]  # Redefined to avoid crashing with special build tags
